--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,6 @@ jobs:
       - run:
           name: Install dependencies GCC and CLANG and Norminette
           command: 'apt-get update && apt-get install -y clang gcc make python3 python3-pip && apt-get install -y libreadline-dev && pip3 install -U norminette'
-    #   - run:
-    #       name: Norminette
-    #       command: norminette src main.c
+      - run:
+          name: Norminette
+          command: norminette main.c
